libs/extractor/src/snapshots/extractor__tests__style_variables-5.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr#\"import {Box} from '@devup-ui/core'\n        <Box styleVars={{\n            variable: true ? \"red\" : \"blue\"\n        }} />\n                \"#,\nExtractOption\n{ package: \"@devup-ui/core\".to_string(), css_file: None }).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "<div style={{ \"--variable\": true ? \"red\" : \"blue\" }} />;\n",
}
