libs/extractor/src/snapshots/extractor__tests__style_variables-6.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr#\"import {Box} from '@devup-ui/core'\n        <Box style={{ \"--d\": \"red\" }} styleVars={{\n            variable: true ? \"red\" : \"blue\"\n        }} />\n                \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "((__devupSpread0) => <div style={{\n\t...{ \"--variable\": true ? \"red\" : \"blue\" },\n\t...__devupSpread0\n}} />)({ \"--d\": \"red\" });\n",
}
