libs/extractor/src/snapshots/extractor__tests__style_variables-7.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr#\"import {Box} from '@devup-ui/core'\n        <Box bg={color} style={{ \"--d\": \"red\" }} styleVars={{\n            variable: true ? \"red\" : \"blue\"\n        }} />\n                \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Dynamic(
            ExtractDynamicStyle {
                property: "background",
                level: 0,
                identifier: "__devupSpread1",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupSpread1, __devupSpread0) => <div className=\"OHbm9yxjddrkgvb7q6\" style={{\n\t...{ \"---SUHde3f7pwyz5x9h83y-az\": __devupSpread1 },\n\t...{ \"--variable\": true ? \"red\" : \"blue\" },\n\t...__devupSpread0\n}} />)(color, { \"--d\": \"red\" });\n",
}
