libs/extractor/src/snapshots/extractor__tests__style_variables-9.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr#\"import {Box} from '@devup-ui/core'\n        <Box styleVars={{\n            [true]: \"red\",\n            [1]: \"blue\",\n            [variable]: \"green\",\n            [2+2]: \"yellow\"\n        }} />\n                \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "((__devupValue0) => <div style={{\n\t[\"--true\"]: \"red\",\n\t[\"--1\"]: \"blue\",\n\t[`--${__devupValue0}`]: \"green\",\n\t[`--${2 + 2}`]: \"yellow\"\n}} />)(variable);\n",
}
