libs/extractor/src/snapshots/extractor__tests__style_variables_mjs.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.js\",\nr#\"import { jsx as e } from \"react/jsx-runtime\";\nimport { Box as o } from \"@devup-ui/core\";\ne(o, { styleVars: { c: \"yellow\" } })\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "import { jsx as e } from \"react/jsx-runtime\";\ne(\"div\", { style: { \"--c\": \"yellow\" } });\n",
}
